--- a/Cloudformation.yml
+++ b/Cloudformation.yml
@@ -206,42 +206,26 @@ Resources:
   ASLC29GY9:
     Type: 'AWS::AutoScaling::LaunchConfiguration'
     Properties:
-      UserData: !Base64 
-        'Fn::Sub':
-          - |
-            #!/bin/bash
-            # Uppdatera Repo
-            yum update -y
-            # Installera Nginx 1.12
-            amazon-linux-extras install nginx1.12 -y
-            # Rename index.html>backupindex.html
-            mv /usr/share/nginx/html/index.html
-            /usr/share/nginx/html/backupindex.html
-            # Skapa index.html
-            touch /usr/share/nginx/html/index.html
-            # Custom index.html
-            echo "<html><H1>Mohsen</H1></html>" >
-            /usr/share/nginx/html/index.html
-            # Installera yum-cron för automatiska updates
-            yum install yum-cron -y
-            #stresstest
-            yum install stress -y
-            # Start & Enable
-            systemctl enable yum-cron
-            #systemctl start yum-cron
-            # Enable autoupdates, editera conf
-            sed -i 's/apply_updates = no/apply_updates = yes/g'
-            /etc/yum/yum-cron.conf
-            # Autostarta Nginx
-            systemctl enable nginx
-            # Restarta Nginx
-            systemctl restart nginx
-            # Add job to crontab, cp local files to bucket
-            echo "*/5 * * * * root aws s3 sync --delete s3://${S3Bucket}
-            /usr/share/nginx/html  >> /etc/crontab
-            # Restart crontab
-            systemctl restart crond
-            # END
+      UserData:
+        Fn::Base64:
+          Fn::Sub:
+          -  |
+           #!/bin/bash
+           yum update -y
+           amazon-linux-extras install nginx1.12 -y
+           mv /usr/share/nginx/html/index.html /usr/share/nginx/html/backupindex.html
+           touch /usr/share/nginx/html/index.html
+           echo "<html><H1>Mohsen</H1></html>" >/usr/share/nginx/html/index.html
+           yum install yum-cron -y
+           yum install stress -y
+           systemctl enable yum-cron
+           systemctl restart yum-cron
+           sed -i 's/apply_updates = no/apply_updates = yes/g' /etc/yum/yum-cron.conf
+           systemctl enable nginx
+           systemctl restart nginx
+           echo "*/5 * * * * root aws s3 sync --delete s3://${S3Bucket} /usr/share/nginx/html" >> /etc/crontab
+           systemctl restart crond
+           aws s3 sync --delete s3://${S3Bucket} /usr/share/nginx/html
           - S3Bucket: !GetAtt s3vahebinginxs3.Arn
       ImageId: ami-030dbca661d402413
       BlockDeviceMappings:
